Added a cat image and a few more elements

--- a/test.html
+++ b/test.html
@@ -1,3 +1,14 @@
+<!DOCTYPE html>
+<html>
+<head>
+<title>test page</title>
+ </head>
+ <body>
 <h1>Hey. I'm a big heading</h1>
-<p>hey im a paragraph element</p>
+<p>hey im a <b>paragraph</b> element</p>
 <a href="https://google.com" target="_blank" title="Let's go to google">click me im a link</a>
+<p>my name is:<br>
+    Kitty cat</p>
+<img src="img/cat.jpeghttps://static01.nyt.com/images/2021/09/14/science/07CAT-STRIPES/07CAT-STRIPES-superJumbo.jpg">
+</body>
+</html>
